// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly normal button 1`] = `
<button
  className="Button"
>
  Normal Button
</button>
`;

exports[`renders correctly small button 1`] = `
<button
  className="Button Button-small"
>
  Small Button
</button>
`;

exports[`renders correctly small button 2`] = `
<button
  className="Button Button-figure"
>
  Figure Button
</button>
`;
